Update logo size and favicon: Make header logo bigger and optimize browser favicon display

--- a/index.html
+++ b/index.html
@@ -7,14 +7,27 @@
     <meta name="description" content="Career Spark helps job seekers draft cover letters, prepare for interviews, and get career advice using AI - completely free." />
     <meta name="author" content="Career Spark" />
 
+    <!-- Favicon - Optimized for browser tab display -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/Logo.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/Logo.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/Logo.png" />
+    <link rel="icon" type="image/png" sizes="144x144" href="/Logo.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/Logo.png" />
+    <link rel="icon" type="image/png" sizes="256x256" href="/Logo.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/Logo.png" />
+    <link rel="shortcut icon" type="image/png" href="/Logo.png" />
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- Open Graph / Social Media -->
     <meta property="og:title" content="Career Spark - Your Free AI Career Assistant" />
     <meta property="og:description" content="Get help with cover letters, interview prep, and career advice using AI. Free and easy to use." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/Logo.png" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@CareerSpark" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/Logo.png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
